// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot after data has been loaded 1`] = `
Array [
  Array [
    <nav
      aria-label="Breadcrumbs"
      role="navigation"
    >
      <ol
        className="breadcrumbs"
      >
        <li
          className="breadcrumbs__crumb"
        >
          <span>
            Users
          </span>
        </li>
      </ol>
    </nav>,
    <script
      dangerouslySetInnerHTML={
        Object {
          "__html": "{
  \\"@context\\": \\"http://schema.org\\",
  \\"@type\\": \\"BreadcrumbList\\",
  \\"itemListElement\\": {
    \\"@type\\": \\"ListItem\\",
    \\"position\\": 1,
    \\"item\\": {
      \\"name\\": \\"Users\\"
    }
  }
}",
        }
      }
      type="application/ld+json"
    />,
  ],
  <div
    className="page-header"
  >
    <h1
      className="page-header__heading"
    >
      Users
    </h1>
  </div>,
  <div
    className="grid"
  >
    <div
      data-g="12 md:3"
    >
      <div
        className="panel"
      >
        <p>
          Filter options
        </p>
        <div
          className="input"
        >
          <label
            className="input__label"
            htmlFor="userSearch"
          >
            Search
          </label>
          <input
            className="input__input"
            id="userSearch"
            name="user-search"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      aria-busy={false}
      data-g="12 md:9"
    >
      <ul
        className="list--unstyled"
        data-qa-sel="list-of-users"
      >
        <li>
          <article
            className="card"
          >
            <header
              className="card__header"
            >
              <p
                className="card__heading"
              >
                <a
                  href="/users/1"
                  onClick={[Function]}
                >
                  Kristin Patrick
                </a>
              </p>
            </header>
            <dl
              className="card__metadata"
            >
              <div
                className="card__metadatum"
              >
                <dd>
                  <span
                    className="tag tag--live"
                  >
                    Active
                  </span>
                </dd>
              </div>
              <div
                className="card__metadatum"
              >
                <dt
                  className="visually-hidden"
                >
                  Email address
                </dt>
                <dd>
                  kristin.patrick@example.com
                </dd>
              </div>
            </dl>
          </article>
        </li>
        <li>
          <article
            className="card"
          >
            <header
              className="card__header"
            >
              <p
                className="card__heading"
              >
                <a
                  href="/users/2"
                  onClick={[Function]}
                >
                  Thomas Holding
                </a>
              </p>
            </header>
            <dl
              className="card__metadata"
            >
              <div
                className="card__metadatum"
              >
                <dd>
                  <span
                    className="tag tag--live"
                  >
                    Active
                  </span>
                </dd>
              </div>
              <div
                className="card__metadatum"
              >
                <dt
                  className="visually-hidden"
                >
                  Email address
                </dt>
                <dd>
                  thomas.holding@example.com
                </dd>
              </div>
            </dl>
          </article>
        </li>
        <li>
          <article
            className="card"
          >
            <header
              className="card__header"
            >
              <p
                className="card__heading"
              >
                <a
                  href="/users/3"
                  onClick={[Function]}
                >
                  Aisha Bartlett
                </a>
              </p>
            </header>
            <dl
              className="card__metadata"
            >
              <div
                className="card__metadatum"
              >
                <dd>
                  <span
                    className="tag tag--live"
                  >
                    Active
                  </span>
                </dd>
              </div>
              <div
                className="card__metadatum"
              >
                <dt
                  className="visually-hidden"
                >
                  Email address
                </dt>
                <dd>
                  aisha.bartlett@example.com
                </dd>
              </div>
            </dl>
          </article>
        </li>
        <li>
          <article
            className="card"
          >
            <header
              className="card__header"
            >
              <p
                className="card__heading"
              >
                <a
                  href="/users/4"
                  onClick={[Function]}
                >
                  Theo Bradford
                </a>
              </p>
            </header>
            <dl
              className="card__metadata"
            >
              <div
                className="card__metadatum"
              >
                <dd>
                  <span
                    className="tag tag--live"
                  >
                    Active
                  </span>
                </dd>
              </div>
              <div
                className="card__metadatum"
              >
                <dt
                  className="visually-hidden"
                >
                  Email address
                </dt>
                <dd>
                  theo.bradford@example.com
                </dd>
              </div>
            </dl>
          </article>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`should show error message when fetch returns 401 error 1`] = `
Array [
  Array [
    <nav
      aria-label="Breadcrumbs"
      role="navigation"
    >
      <ol
        className="breadcrumbs"
      >
        <li
          className="breadcrumbs__crumb"
        >
          <span>
            Users
          </span>
        </li>
      </ol>
    </nav>,
    <script
      dangerouslySetInnerHTML={
        Object {
          "__html": "{
  \\"@context\\": \\"http://schema.org\\",
  \\"@type\\": \\"BreadcrumbList\\",
  \\"itemListElement\\": {
    \\"@type\\": \\"ListItem\\",
    \\"position\\": 1,
    \\"item\\": {
      \\"name\\": \\"Users\\"
    }
  }
}",
        }
      }
      type="application/ld+json"
    />,
  ],
  <div
    className="page-header"
  >
    <h1
      className="page-header__heading"
    >
      Users
    </h1>
  </div>,
  <div
    className="alert alert--error"
  >
    <h2>
      Whoops
    </h2>
    <p>
      Sorry, there's been an error!
    </p>
  </div>,
]
`;

exports[`should show error message when fetch returns 500 error 1`] = `
Array [
  Array [
    <nav
      aria-label="Breadcrumbs"
      role="navigation"
    >
      <ol
        className="breadcrumbs"
      >
        <li
          className="breadcrumbs__crumb"
        >
          <span>
            Users
          </span>
        </li>
      </ol>
    </nav>,
    <script
      dangerouslySetInnerHTML={
        Object {
          "__html": "{
  \\"@context\\": \\"http://schema.org\\",
  \\"@type\\": \\"BreadcrumbList\\",
  \\"itemListElement\\": {
    \\"@type\\": \\"ListItem\\",
    \\"position\\": 1,
    \\"item\\": {
      \\"name\\": \\"Users\\"
    }
  }
}",
        }
      }
      type="application/ld+json"
    />,
  ],
  <div
    className="page-header"
  >
    <h1
      className="page-header__heading"
    >
      Users
    </h1>
  </div>,
  <div
    className="alert alert--error"
  >
    <h2>
      Whoops
    </h2>
    <p>
      Sorry, there's been an error!
    </p>
  </div>,
]
`;
